feat: add root package json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@instillai/console",
+  "name": "instillai-console",
   "version": "0.0.1",
   "main": "index.js",
   "repository": "https://github.com/instill-ai/console.git",
