--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+node_modules
 /.pnp
 .pnp.js
 
@@ -9,9 +9,9 @@
 /coverage
 
 # Build directories (next.js...)
-/.next/
-/out/
-/build
+.next/
+out/
+build
 
 # Cache
 **/tsconfig.tsbuildinfo
