--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,7 @@
   "license": "Apache License 2.0",
   "private": true,
   "scripts": {
-    "dev": "NODE_OPTIONS='--inspect' next dev -H 127.0.0.1 -p 3000",
+    "dev": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build"
   },
   "dependencies": {
