--- a/app/package.json
+++ b/app/package.json
@@ -8,7 +8,8 @@
   "private": true,
   "scripts": {
     "dev": "NODE_OPTIONS='--inspect' next dev",
-    "build": "next build"
+    "build": "next build",
+    "test": "jest"
   },
   "dependencies": {
     "clsx": "^1.1.1",
@@ -19,6 +20,7 @@
   "devDependencies": {
     "@types/node": "^17.0.22",
     "@types/react": "^17.0.41",
+    "jest": "^27.5.1",
     "typescript": "^4.6.2"
   }
 }
