--- a/package.json
+++ b/package.json
@@ -11,10 +11,20 @@
     "app"
   ],
   "scripts": {
-    "docker:web-app:install": "docker buildx bake -f ./docker-compose.app.yml --progress=tty deps",
-    "docker:app:develop": "cross-env DOCKER_BUILDKIT=1 docker-compose -f docker-compose.yml -f ./docker-compose.app.yml up --build develop"
+    "docker:app:install": "docker buildx bake -f ./docker-compose.app.yml --progress=tty deps",
+    "docker:app:develop": "cross-env DOCKER_BUILDKIT=1 docker-compose -f docker-compose.yml -f ./docker-compose.app.yml up --build develop",
+    "docker:prune-cache": "docker buildx prune",
+    "docker:nuke-all": "npm-run-all --sequential --continue-on-error --print-label \"docker:nuke:*\"",
+    "docker:nuke:images": "docker image rm -f $(docker image ls -q)",
+    "docker:nuke:containers": "docker container rm -f $(docker container ls -qa)",
+    "docker:nuke:volumes": "docker volume rm $(docker volume ls -q)",
+    "docker:nuke:prune-cachemount": "docker builder prune --filter type=exec.cachemount",
+    "docker:nuke:prune-buildx": "docker buildx prune"
   },
   "dependencies": {
     "cross-env": "^7.0.3"
+  },
+  "devDependencies": {
+    "npm-run-all": "^4.1.5"
   }
 }
