--- a/app/package.json
+++ b/app/package.json
@@ -20,7 +20,10 @@
   "devDependencies": {
     "@types/node": "^17.0.22",
     "@types/react": "^17.0.41",
+    "autoprefixer": "^10.4.4",
     "jest": "^27.5.1",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.23",
     "typescript": "^4.6.2"
   }
 }
