--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,9 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.3",
+    "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^13.5.0",
     "@types/node": "^17.0.22",
     "@types/react": "^17.0.41",
     "autoprefixer": "^10.4.4",
