--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "repository": "https://github.com/instill-ai/console.git",
   "author": "Instill AI",
-  "license": "Apache License 2.0",
+  "license": "Apache-2.0",
   "private": false,
   "scripts": {
     "docker:app:install": "docker buildx bake -f ./docker-compose.app.yml --progress=tty deps",
@@ -23,15 +23,17 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "cross-env": "^7.0.3",
+    "@instill-ai/design-system": "^0.0.10",
     "clsx": "^1.1.1",
+    "cross-env": "^7.0.3",
     "next": "^12.1.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-select": "^5.3.0"
   },
   "devDependencies": {
-    "npm-run-all": "^4.1.5",
     "@babel/core": "^7.17.8",
+    "@playwright/test": "^1.20.1",
     "@storybook/addon-actions": "^6.4.19",
     "@storybook/addon-docs": "^6.4.19",
     "@storybook/addon-essentials": "^6.4.19",
@@ -48,6 +50,7 @@
     "autoprefixer": "^10.4.4",
     "babel-loader": "^8.2.4",
     "jest": "^27.5.1",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.12",
     "storybook-addon-next-router": "^3.1.1",
     "tailwindcss": "^3.0.23",
