--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "build": "next build",
     "test": "jest",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "prepare": "husky install",
+    "prettier:fix": "prettier --write",
+    "prettier:check": "prettier --check"
   },
   "dependencies": {
     "@instill-ai/design-system": "^0.0.10",
@@ -33,6 +36,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
+    "@commitlint/cli": "^16.2.3",
+    "@commitlint/config-conventional": "^16.2.1",
     "@playwright/test": "^1.20.1",
     "@storybook/addon-actions": "^6.4.19",
     "@storybook/addon-docs": "^6.4.19",
@@ -47,14 +52,39 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/node": "^17.0.22",
     "@types/react": "^17.0.41",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
     "autoprefixer": "^10.4.4",
     "babel-loader": "^8.2.4",
+    "eslint": "^8.13.0",
+    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^26.1.4",
+    "eslint-plugin-jest-formatting": "^3.1.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.4.0",
+    "eslint-plugin-storybook": "^0.5.10",
+    "eslint-plugin-testing-library": "^5.3.1",
+    "husky": "^7.0.0",
     "jest": "^27.5.1",
+    "lint-staged": ">=10",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.12",
+    "prettier": "^2.6.2",
     "storybook-addon-next-router": "^3.1.1",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.6.2",
     "webpack": "^5.70.0"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "yarn prettier:fix",
+      "eslint --cache --fix",
+      "jest --bail --findRelatedTests"
+    ],
+    "*.stories.{ts,tsx}": [
+      "yarn prettier:fix",
+      "eslint --fix"
+    ]
   }
 }
