--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "prettier:check": "prettier --check"
   },
   "dependencies": {
-    "@instill-ai/design-system": "^0.0.10",
+    "@instill-ai/design-system": "^0.0.11",
     "clsx": "^1.1.1",
     "cross-env": "^7.0.3",
     "next": "^12.1.0",
@@ -71,6 +71,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.12",
     "prettier": "^2.6.2",
+    "prettier-plugin-tailwindcss": "^0.1.8",
     "storybook-addon-next-router": "^3.1.1",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.6.2",
