--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "prettier:check": "prettier --check"
   },
   "dependencies": {
-    "@instill-ai/design-system": "^0.0.11",
+    "@instill-ai/design-system": "^0.0.12",
     "clsx": "^1.1.1",
     "cross-env": "^7.0.3",
     "next": "^12.1.0",
@@ -85,7 +85,7 @@
     ],
     "*.stories.{ts,tsx}": [
       "yarn prettier:fix",
-      "eslint --fix"
+      "eslint --cache --fix"
     ]
   }
 }
