--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next": "^12.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.38.0",
     "react-select": "^5.3.0"
   },
   "devDependencies": {
