--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@instill-ai/design-system": "^0.0.25",
+    "@octokit/request": "^5.6.3",
     "clsx": "^1.1.1",
     "cross-env": "^7.0.3",
     "next": "^12.1.0",
