--- a/package.json
+++ b/package.json
@@ -27,14 +27,15 @@
   },
   "dependencies": {
     "@instill-ai/design-system": "^0.0.25",
-    "@octokit/request": "^5.6.3",
+    "axios": "^0.27.2",
     "clsx": "^1.1.1",
     "cross-env": "^7.0.3",
     "next": "^12.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.38.0",
-    "react-select": "^5.3.0"
+    "react-select": "^5.3.0",
+    "yaml": "^2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
