--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+
+   
 version: "3.9"
 
 networks:
@@ -9,66 +11,60 @@ volumes:
     name: conda-pack
   model_repository:
     name: model-repository
-  pg_sql:
-    name: pg-sql
 
 services:
-  vdp:
-    container_name: vdp
-    build:
-      context: .
-    image: instill/vdp:dev
-    restart: unless-stopped
-    volumes:
-      - ./configs:/vdp/configs
-    depends_on:
-      - temporal
-
-  model_backend_migrate:
-    container_name: model-backend-migrate
-    image: instill/model-backend:v0.3.2-alpha
+  mgmt_backend_migrate:
+    container_name: mgmt-backend-migrate
+    image: instill/mgmt-backend:v0.1.0-alpha
     restart: on-failure
     environment:
       CFG_DATABASE_USERNAME: postgres
       CFG_DATABASE_PASSWORD: password
       CFG_DATABASE_HOST: pg_sql
       CFG_DATABASE_PORT: 5432
-    entrypoint: ./model-backend-migrate
+    entrypoint: ./mgmt-backend-migrate
     depends_on:
       pg_sql:
         condition: service_healthy
 
-  model_backend:
-    container_name: model-backend
-    image: instill/model-backend:v0.3.2-alpha
-    restart: unless-stopped
+  mgmt_backend_init:
+    container_name: mgmt-backend-init
+    image: instill/mgmt-backend:v0.1.0-alpha
+    restart: on-failure
     environment:
-      CFG_DATABASE_USERNAME: postgres
-      CFG_DATABASE_PASSWORD: password
+      CFG_SERVER_PORT: 8080
       CFG_DATABASE_HOST: pg_sql
       CFG_DATABASE_PORT: 5432
-      CFG_SERVER_PORT: 8445
-      CFG_TRITONSERVER_GRPCURI: triton-server:8001
-      CFG_TRITONSERVER_MODELSTORE: /model-repository
-    ports:
-      - 8445:8445
-    volumes:
-      - model_repository:/model-repository
+      CFG_DATABASE_USERNAME: postgres
+      CFG_DATABASE_PASSWORD: password
+    entrypoint: ./mgmt-backend-init
     depends_on:
-      triton_server:
-        condition: service_healthy
+      - mgmt_backend_migrate
+
+  mgmt_backend:
+    container_name: mgmt-backend
+    image: instill/mgmt-backend:v0.1.0-alpha
+    restart: unless-stopped
+    environment:
+      CFG_SERVER_PORT: 8080
+      CFG_DATABASE_HOST: pg_sql
+      CFG_DATABASE_PORT: 5432
+      CFG_DATABASE_USERNAME: postgres
+      CFG_DATABASE_PASSWORD: password
+    ports:
+      - 8080:8080
+    depends_on:
+      - mgmt_backend_migrate
 
   pipeline_backend_migrate:
     container_name: pipeline-backend-migrate
-    image: instill/pipeline-backend:v0.3.1-alpha
+    image: instill/pipeline-backend:v0.4.0-alpha
     restart: on-failure
     environment:
-      CFG_DATABASE_USERNAME: postgres
-      CFG_DATABASE_PASSWORD: password
       CFG_DATABASE_HOST: pg_sql
       CFG_DATABASE_PORT: 5432
-    volumes:
-      - ./backends/pipeline-backend/config:/pipeline-backend/configs
+      CFG_DATABASE_USERNAME: postgres
+      CFG_DATABASE_PASSWORD: password
     entrypoint: ./pipeline-backend-migrate
     depends_on:
       pg_sql:
@@ -76,22 +72,119 @@ services:
 
   pipeline_backend:
     container_name: pipeline-backend
-    image: instill/pipeline-backend:v0.3.1-alpha
+    image: instill/pipeline-backend:v0.4.0-alpha
     restart: unless-stopped
     environment:
-      CFG_SERVER_PORT: 8446
-      CFG_DATABASE_USERNAME: postgres
-      CFG_DATABASE_PASSWORD: password
+      CFG_SERVER_PORT: 8081
       CFG_DATABASE_HOST: pg_sql
       CFG_DATABASE_PORT: 5432
+      CFG_DATABASE_USERNAME: postgres
+      CFG_DATABASE_PASSWORD: password
+      CFG_CONNECTORBACKEND_HOST: connector_backend
+      CFG_CONNECTORBACKEND_PORT: 8082
+      CFG_MODELBACKEND_HOST: model_backend
+      CFG_MODELBACKEND_PORT: 8083
+      CFG_TEMPORAL_CLIENTOPTIONS_HOSTPORT: "temporal:7233"
     ports:
-      - 8446:8446
-    volumes:
-      - ./backends/pipeline-backend/config:/pipeline-backend/configs
+      - 8081:8081
     depends_on:
       - pipeline_backend_migrate
+      - mgmt_backend
+      - connector_backend
+      - model_backend
       - temporal
       - redis
+
+  connector_backend_migrate:
+    container_name: connector-backend-migrate
+    image: instill/connector-backend:v0.1.0-alpha
+    restart: on-failure
+    environment:
+      CFG_DATABASE_HOST: pg_sql
+      CFG_DATABASE_PORT: 5432
+      CFG_DATABASE_USERNAME: postgres
+      CFG_DATABASE_PASSWORD: password
+    entrypoint: ./connector-backend-migrate
+    depends_on:
+      pg_sql:
+        condition: service_healthy
+
+  connector_backend_init:
+    container_name: connector-backend-init
+    image: instill/connector-backend:v0.1.0-alpha
+    restart: on-failure
+    environment:
+      CFG_DATABASE_HOST: pg_sql
+      CFG_DATABASE_PORT: 5432
+      CFG_DATABASE_USERNAME: postgres
+      CFG_DATABASE_PASSWORD: password
+    entrypoint: ./connector-backend-init
+    depends_on:
+      - connector_backend_migrate
+
+  connector_backend:
+    container_name: connector-backend
+    image: instill/connector-backend:v0.1.0-alpha
+    restart: unless-stopped
+    environment:
+      CFG_SERVER_PORT: 8082
+      CFG_DATABASE_HOST: pg_sql
+      CFG_DATABASE_PORT: 5432
+      CFG_DATABASE_USERNAME: postgres
+      CFG_DATABASE_PASSWORD: password
+    ports:
+      - 8082:8082
+    depends_on:
+      - connector_backend_init
+
+  model_backend_migrate:
+    container_name: model-backend-migrate
+    image: instill/model-backend:v0.4.0-alpha
+    restart: on-failure
+    environment:
+      CFG_DATABASE_HOST: pg_sql
+      CFG_DATABASE_PORT: 5432
+      CFG_DATABASE_USERNAME: postgres
+      CFG_DATABASE_PASSWORD: password
+    entrypoint: ./model-backend-migrate
+    depends_on:
+      pg_sql:
+        condition: service_healthy
+
+  model_backend_init:
+    container_name: model-backend-init
+    image: instill/model-backend:v0.4.0-alpha
+    restart: on-failure
+    environment:
+      CFG_DATABASE_HOST: pg_sql
+      CFG_DATABASE_PORT: 5432
+      CFG_DATABASE_USERNAME: postgres
+      CFG_DATABASE_PASSWORD: password
+    entrypoint: ./model-backend-init
+    depends_on:
+      - model_backend_migrate
+
+  model_backend:
+    container_name: model-backend
+    image: instill/model-backend:v0.4.0-alpha
+    restart: unless-stopped
+    environment:
+      CFG_SERVER_PORT: 8083
+      CFG_DATABASE_HOST: pg_sql
+      CFG_DATABASE_PORT: 5432
+      CFG_DATABASE_USERNAME: postgres
+      CFG_DATABASE_PASSWORD: password
+      CFG_TRITONSERVER_GRPCURI: triton-server:8001
+      CFG_TRITONSERVER_MODELSTORE: /model-repository
+    ports:
+      - 8083:8083
+    volumes:
+      - model_repository:/model-repository
+    depends_on:
+      triton_server:
+        condition: service_healthy
+      model_backend_init:
+        condition: service_completed_successfully
 
   triton_conda_env:
     container_name: triton-conda-env
@@ -115,27 +208,23 @@ services:
       retries: 10
     shm_size: 2gb
     ulimits:
-      memlock: -1
-      stack: 67108864
+        memlock: -1
+        stack: 67108864
     depends_on:
       - triton_conda_env
 
   pg_sql:
     container_name: pg-sql
-    image: bitnami/postgresql:14.1.0
+    image: postgres:14.1-alpine
     restart: unless-stopped
-    environment:
-      POSTGRES_PASSWORD: password
     ports:
       - 5432:5432
-    volumes:
-      - pg_sql:/bitnami/postgresql
-      - ./scripts/postgresql_healthcheck.sh:/scripts/postgresql_healthcheck.sh
+    environment:
+      POSTGRES_PASSWORD: password
     healthcheck:
-      test: ["CMD", "/scripts/postgresql_healthcheck.sh"]
-      interval: 15s
-      timeout: 5s
-      retries: 6
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      timeout: 20s
+      retries: 10
 
   temporal:
     container_name: temporal
@@ -151,7 +240,7 @@ services:
     ports:
       - 7233:7233
     volumes:
-      - ./backends/temporal/dynamicconfig:/etc/temporal/config/dynamicconfig
+      - ./configs/temporal/dynamicconfig:/etc/temporal/config/dynamicconfig
     depends_on:
       pg_sql:
         condition: service_healthy
@@ -192,7 +281,7 @@ services:
     container_name: redoc-openapi
     image: volbrene/redoc:1.2.0
     environment:
-      - "URLS=[{url: 'https://raw.githubusercontent.com/instill-ai/protobufs/main/instill/pipeline/v1alpha/pipeline.swagger.json', name: 'Pipeline'},{url: 'https://raw.githubusercontent.com/instill-ai/protobufs/main/instill/model/v1alpha/model.swagger.json', name: 'Model'}]"
+      - 'URLS=[{url: ''https://raw.githubusercontent.com/instill-ai/protobufs/main/instill/pipeline/v1alpha/pipeline.swagger.json'', name: ''Pipeline''},{url: ''https://raw.githubusercontent.com/instill-ai/protobufs/main/instill/model/v1alpha/model.swagger.json'', name: ''Model''}]'
       - PAGE_TITLE=Instill AI - API Reference
     ports:
       - 3000:80
