--- a/.env
+++ b/.env
@@ -7,3 +7,7 @@ COMPOSE_DOCKER_CLI_BUILD=1
 
 #----------- Triton server version ------------#
 TRITONSERVER_VERSION=22.01-py3
+
+#----------- Frontend -------------------------#
+NEXT_PUBLIC_PIPELINE_API_ENDPOINT=http://localhost:8081
+NEXT_PUBLIC_API_VERSION=v1alpha
