feat: add cookie lib

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@instill-ai/design-system": "^0.0.42",
     "axios": "^0.27.2",
     "clsx": "^1.1.1",
+    "cookie": "^0.5.0",
     "cross-env": "^7.0.3",
     "formik": "^2.2.9",
     "next": "^12.1.0",
@@ -54,6 +55,7 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@types/cookie": "^0.5.1",
     "@types/node": "^17.0.22",
     "@types/react": "^17.0.41",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
