feat: update new dockerfile port config

--- a/.env
+++ b/.env
@@ -10,4 +10,5 @@ TRITONSERVER_VERSION=22.01-py3
 
 #----------- Frontend -------------------------#
 NEXT_PUBLIC_PIPELINE_API_ENDPOINT=http://localhost:8081
+NEXT_PUBLIC_MGMT_API_ENDPOINT=http://localhost:8080
 NEXT_PUBLIC_API_VERSION=v1alpha
