--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@instill-ai/design-system": "^0.0.48",
+    "@tailwindcss/line-clamp": "^0.4.0",
     "axios": "^0.27.2",
     "clsx": "^1.1.1",
     "cookie": "^0.5.0",
