--- a/.dockerignore
+++ b/.dockerignore
@@ -2,6 +2,9 @@
 node_modules
 **/node_modules
 
+# nextjs build
+.next
+
 # All secrets
 **/.env.local
 **/.env.*.local
@@ -45,3 +48,8 @@ logs
 # Temp files
 tmp
 *.tmp
+
+# IDE related
+
+.idea
+.vscode
