--- a/package.json
+++ b/package.json
@@ -37,10 +37,10 @@
     "react-dom": "^17.0.2",
     "react-query": "^3.38.0",
     "react-select": "^5.3.1",
+    "uuid": "^8.3.2",
     "yaml": "^2.0.1"
   },
   "devDependencies": {
-    "@tailwindcss/line-clamp": "^0.4.0",
     "@babel/core": "^7.17.8",
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
@@ -53,12 +53,14 @@
     "@storybook/addon-postcss": "^2.0.0",
     "@storybook/react": "^6.4.19",
     "@storybook/testing-library": "^0.0.9",
+    "@tailwindcss/line-clamp": "^0.4.0",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "@types/cookie": "^0.5.1",
     "@types/node": "^17.0.22",
     "@types/react": "^17.0.41",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "autoprefixer": "^10.4.4",
