--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prettier:check": "prettier --check"
   },
   "dependencies": {
+    "@amplitude/analytics-browser": "^0.4.1",
     "@instill-ai/design-system": "^0.0.60",
     "axios": "^0.27.2",
     "clsx": "^1.1.1",
