--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "husky": "^7.0.0",
     "jest": "^27.5.1",
     "lint-staged": ">=10",
+    "msw": "^0.42.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.12",
     "prettier": "^2.6.2",
