--- a/.env
+++ b/.env
@@ -8,4 +8,10 @@ COMPOSE_DOCKER_CLI_BUILD=1
 #----------- Triton server version ------------#
 TRITONSERVER_VERSION=22.01-py3
 
+#----------- For Jest -------------------------#
 
+NEXT_PUBLIC_MGMT_API_ENDPOINT=http://localhost:8080
+NEXT_PUBLIC_PIPELINE_API_ENDPOINT=http://localhost:8081
+NEXT_PUBLIC_CONNECTOR_API_ENDPOINT=http://localhost:8082
+NEXT_PUBLIC_MODEL_API_ENDPOINT=http://localhost:8083
+NEXT_PUBLIC_API_VERSION=v1alpha
