--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "formik": "^2.2.9",
     "next": "^12.1.0",
     "react": "^17.0.2",
+    "react-code-blocks": "^0.0.9-0",
     "react-dom": "^17.0.2",
     "react-query": "^3.38.0",
     "react-select": "^5.3.1",
