--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "dependencies": {
     "@amplitude/analytics-browser": "^0.4.1",
-    "@instill-ai/design-system": "^0.0.62",
+    "@instill-ai/design-system": "^0.0.64",
     "axios": "^0.27.2",
     "clsx": "^1.1.1",
     "cookie": "^0.5.0",
@@ -34,6 +34,7 @@
     "formik": "^2.2.9",
     "next": "^12.1.0",
     "react": "^17.0.2",
+    "react-code-blocks": "^0.0.9-0",
     "react-dom": "^17.0.2",
     "react-query": "^3.38.0",
     "react-select": "^5.3.1",
