--- a/.env
+++ b/.env
@@ -10,6 +10,7 @@ TRITONSERVER_VERSION=22.01-py3
 
 #----------- For Jest -------------------------#
 
+NEXT_PUBLIC_MAIN_URL=http://localhost:3000
 NEXT_PUBLIC_MGMT_API_ENDPOINT=http://localhost:8080
 NEXT_PUBLIC_PIPELINE_API_ENDPOINT=http://localhost:8081
 NEXT_PUBLIC_CONNECTOR_API_ENDPOINT=http://localhost:8082
