--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^26.1.4",
     "eslint-plugin-jest-formatting": "^3.1.0",
+    "eslint-plugin-playwright": "^0.9.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
     "eslint-plugin-storybook": "^0.5.10",
