--- a/.env
+++ b/.env
@@ -16,3 +16,4 @@ NEXT_PUBLIC_PIPELINE_API_ENDPOINT=http://localhost:8081
 NEXT_PUBLIC_CONNECTOR_API_ENDPOINT=http://localhost:8082
 NEXT_PUBLIC_MODEL_API_ENDPOINT=http://localhost:8083
 NEXT_PUBLIC_API_VERSION=v1alpha
+NEXT_PUBLIC_INSTILL_AI_USER_COOKIE_NAME=instill_ai_user
