feat: add onboarding e2e test (#20)
Because

- We need e2e test to make sure everything is working correctly

This commit

- Implement onboarding e2e test
- Fix issue related to input field's id

--- a/.env
+++ b/.env
@@ -10,8 +10,10 @@ TRITONSERVER_VERSION=22.01-py3
 
 #----------- For Jest -------------------------#
 
+NEXT_PUBLIC_MAIN_URL=http://localhost:3000
 NEXT_PUBLIC_MGMT_API_ENDPOINT=http://localhost:8080
 NEXT_PUBLIC_PIPELINE_API_ENDPOINT=http://localhost:8081
 NEXT_PUBLIC_CONNECTOR_API_ENDPOINT=http://localhost:8082
 NEXT_PUBLIC_MODEL_API_ENDPOINT=http://localhost:8083
 NEXT_PUBLIC_API_VERSION=v1alpha
+NEXT_PUBLIC_INSTILL_AI_USER_COOKIE_NAME=instill_ai_user
