--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@typescript-eslint/parser": "^5.20.0",
     "autoprefixer": "^10.4.4",
     "babel-loader": "^8.2.4",
+    "dotenv": "^16.0.1",
     "eslint": "^8.13.0",
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.26.0",
