--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,7 @@ jobs:
           command: manifest
           config-file: release-please/config.json
           manifest-file: release-please/manifest.json
+          package-name: ""
       - uses: actions/checkout@v2
         with:
           token: ${{ secrets.botGitHubToken }}
