--- a/release-please/config.json
+++ b/release-please/config.json
@@ -2,6 +2,7 @@
   "packages": {
     ".": {
       "release-type": "node",
+      "package-name": "",
       "draft": false,
       "prerelease": true,
       "bump-minor-pre-major": true,
