refactor: refactor docker-compose from args to env

--- a/docker-compose.app.yml
+++ b/docker-compose.app.yml
@@ -8,5 +8,5 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-      args:
-        DISABLE_USAGE_COLLECTION: "false"
+    environment:
+      - DISABLE_USAGE_COLLECTION=false
