--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "prepare": "husky install",
     "prettier:fix": "prettier --write",
     "prettier:check": "prettier --check",
-    "lint": "next lint"
+    "lint": "next lint",
+    "download-airbyte-icons": "node ./downloadAirbyteIcons.js"
   },
   "dependencies": {
     "@amplitude/analytics-browser": "^0.4.1",
