--- a/.github/workflows/images.yml
+++ b/.github/workflows/images.yml
@@ -40,6 +40,9 @@ jobs:
             core.setOutput('tag', tag)
             core.setOutput('no_v_tag', no_v_tag)
 
+      - name: Checkout
+        uses: actions/checkout@v3
+
       - name: Download airbyte icons
         if: github.event_name == 'release'
         run: yarn download-airbyte-icons
