--- a/.github/workflows/images.yml
+++ b/.github/workflows/images.yml
@@ -42,7 +42,7 @@ jobs:
 
       - name: Checkout
         if: github.event_name == 'release'
-        uses: actions/checkout@3
+        uses: actions/checkout@v3
 
       - name: Setup node env
         uses: actions/setup-node@v3
