refactor: refactor MGMT_BACKEND_BASE_URL

--- a/docker-compose.app.yml
+++ b/docker-compose.app.yml
@@ -10,7 +10,7 @@ services:
       dockerfile: Dockerfile
     environment:
       - DISABLE_USAGE_COLLECTION=false
-      - MGMT_API_ENDPOINT=http://localhost:8080
+      - MGMT_BACKEND_BASE_URL=http://localhost:8080
       - PIPELINE_API_ENDPOINT=http://localhost:8081
       - CONNECTOR_API_ENDPOINT=http://localhost:8082
       - MODEL_API_ENDPOINT=http://localhost:8083
