--- a/docker-compose.app.yml
+++ b/docker-compose.app.yml
@@ -13,5 +13,5 @@ services:
       - MGMT_BACKEND_BASE_URL=http://localhost:8080
       - PIPELINE_BACKEND_BASE_URL=http://localhost:8081
       - CONNECTOR_BACKEND_BASE_URL=http://localhost:8082
-      - MODEL_API_ENDPOINT=http://localhost:8083
+      - MODEL_BACKEND_BASE_URL=http://localhost:8083
       - API_VERSION=v1alpha
