--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "^17.0.2",
     "react-code-blocks": "^0.0.9-0",
     "react-dom": "^17.0.2",
+    "react-markdown": "^8.0.3",
     "react-query": "^3.38.0",
     "react-select": "^5.3.1",
     "uuid": "^8.3.2",
