--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-select": "^5.3.1",
     "remark-frontmatter": "^4.0.1",
     "uuid": "^8.3.2",
-    "yaml": "^2.0.1"
+    "yaml": "^2.0.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
