feat: update readme

--- a/package.json
+++ b/package.json
@@ -7,14 +7,8 @@
   "license": "Apache-2.0",
   "private": false,
   "scripts": {
-    "docker:app:develop": "cross-env DOCKER_BUILDKIT=1 docker-compose -f ./docker-compose.app.yml up --build --force-recreate",
+    "docker:app:develop": "cross-env DOCKER_BUILDKIT=1 docker-compose -f ./docker-compose_app.yml up --build --force-recreate",
     "docker:prune-cache": "docker buildx prune",
-    "docker:nuke-all": "npm-run-all --sequential --continue-on-error --print-label \"docker:nuke:*\"",
-    "docker:nuke:images": "docker image rm -f $(docker image ls -q)",
-    "docker:nuke:containers": "docker container rm -f $(docker container ls -qa)",
-    "docker:nuke:volumes": "docker volume rm $(docker volume ls -q)",
-    "docker:nuke:prune-cachemount": "docker builder prune --filter type=exec.cachemount",
-    "docker:nuke:prune-buildx": "docker buildx prune",
     "dev": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
