--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "dependencies": {
     "@amplitude/analytics-browser": "^0.4.1",
-    "@instill-ai/design-system": "^0.0.75",
+    "@instill-ai/design-system": "^0.0.82",
     "@types/json-schema": "^7.0.11",
     "axios": "^0.27.2",
     "clsx": "^1.1.1",
@@ -39,7 +39,8 @@
     "react-select": "^5.3.1",
     "remark-frontmatter": "^4.0.1",
     "uuid": "^8.3.2",
-    "yaml": "^2.0.1"
+    "yaml": "^2.0.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
