feat: add CONSOLE_EDITION env

--- a/docker-compose_app.yml
+++ b/docker-compose_app.yml
@@ -16,3 +16,4 @@ services:
       - MODEL_BACKEND_BASE_URL=http://localhost:8083
       - CONSOLE_DOMAIN=localhost
       - API_VERSION=v1alpha
+      - CONSOLE_EDITION=local:ce-dev
