--- a/.github/workflows/add-pr-to-prj.yml
+++ b/.github/workflows/add-pr-to-prj.yml
@@ -1,10 +1,11 @@
 name: Add PR to Project
 
 on:
-  pull_request:
+  pull_request_target:
     types:
       - opened
       - ready_for_review
+
 jobs:
   track_pr:
     runs-on: ubuntu-latest
@@ -14,7 +15,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.botGitHubToken }}
           ORGANIZATION: instill-ai
-          PROJECT_NUMBER: 5  # Visual Datat Preparation (VDP) project
+          PROJECT_NUMBER: 5 # Visual Datat Preparation (VDP) project
         run: |
           gh api graphql -f query='
             query($org: String!, $number: Int!) {
