fix: fix pnpm dockerfile issue

--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
   "dependencies": {
     "@amplitude/analytics-browser": "^0.4.1",
     "@instill-ai/design-system": "^0.0.103",
-    "@types/json-schema": "^7.0.11",
     "axios": "^0.27.2",
     "clsx": "^1.1.1",
     "cookie": "^0.5.0",
@@ -46,6 +45,7 @@
     "@babel/core": "^7.17.8",
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
+    "@next/env": "^12.2.3",
     "@playwright/test": "^1.22.2",
     "@storybook/addon-actions": "^6.5.9",
     "@storybook/addon-docs": "^6.5.9",
@@ -64,9 +64,12 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@types/json-schema": "^7.0.11",
     "@types/cookie": "^0.5.1",
+    "@types/jest": "^28.1.6",
     "@types/node": "^17.0.22",
     "@types/react": "^17.0.41",
+    "@types/react-dom": "^18.0.6",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
