--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "dependencies": {
     "@amplitude/analytics-browser": "^0.4.1",
-    "@instill-ai/design-system": "^0.0.103",
+    "@instill-ai/design-system": "^0.0.106",
     "axios": "^0.27.2",
     "clsx": "^1.1.1",
     "cookie": "^0.5.0",
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
+    "@code-hike/mdx": "^0.7.3",
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
     "@next/env": "^12.2.3",
@@ -64,9 +65,9 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "@types/json-schema": "^7.0.11",
     "@types/cookie": "^0.5.1",
     "@types/jest": "^28.1.6",
+    "@types/json-schema": "^7.0.11",
     "@types/node": "^17.0.22",
     "@types/react": "^17.0.41",
     "@types/react-dom": "^18.0.6",
@@ -90,6 +91,7 @@
     "jest": "^27.5.1",
     "lint-staged": ">=10",
     "msw": "^0.42.1",
+    "next-mdx-remote": "^4.1.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.12",
     "prettier": "^2.6.2",
