--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cross-env": "^7.0.3",
     "formik": "^2.2.9",
     "next": "^12.1.0",
+    "prismjs": "^1.28.0",
     "react": "^17.0.2",
     "react-code-blocks": "^0.0.9-0",
     "react-dom": "^17.0.2",
@@ -71,6 +72,7 @@
     "@types/jest": "^28.1.6",
     "@types/json-schema": "^7.0.11",
     "@types/node": "^17.0.22",
+    "@types/prismjs": "^1.26.0",
     "@types/react": "^17.0.41",
     "@types/react-dom": "17.0.17",
     "@types/uuid": "^8.3.4",
