--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "axios": "^0.27.2",
     "clsx": "^1.1.1",
     "cookie": "^0.5.0",
+    "copy-to-clipboard": "^3.3.2",
     "cross-env": "^7.0.3",
     "formik": "^2.2.9",
     "next": "^12.1.0",
+    "prismjs": "^1.28.0",
     "react": "^17.0.2",
     "react-code-blocks": "^0.0.9-0",
     "react-dom": "^17.0.2",
@@ -37,6 +39,7 @@
     "react-query": "^3.38.0",
     "react-select": "^5.3.1",
     "remark-frontmatter": "^4.0.1",
+    "shiki": "^0.11.1",
     "uuid": "^8.3.2",
     "yaml": "^2.0.1",
     "yup": "^0.32.11"
@@ -69,8 +72,9 @@
     "@types/jest": "^28.1.6",
     "@types/json-schema": "^7.0.11",
     "@types/node": "^17.0.22",
+    "@types/prismjs": "^1.26.0",
     "@types/react": "^17.0.41",
-    "@types/react-dom": "^18.0.6",
+    "@types/react-dom": "17.0.17",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
