--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-query": "^3.38.0",
     "react-select": "^5.3.1",
     "remark-frontmatter": "^4.0.1",
+    "sharp": "^0.30.7",
     "shiki": "^0.11.1",
     "uuid": "^8.3.2",
     "yaml": "^2.0.1",
