fix: fix various typo (#239)
Because

- #238
- #230
- #213

This commit

- fix various type (close #213)
- fix single select field responsive issue (close #230)
- remove trailing; from test result (close #238)

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "Apache-2.0",
   "private": false,
   "scripts": {
-    "docker:app:develop": "cross-env DOCKER_BUILDKIT=1 docker-compose -f ./docker-compose_app.yml up --build --force-recreate",
+    "docker:app:develop": "cross-env DOCKER_BUILDKIT=1 docker-compose -f ./docker-compose_app.yml up --build --remove-orphans --force-recreate",
     "docker:prune-cache": "docker buildx prune",
     "dev": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
@@ -15,7 +15,7 @@
     "test": "jest",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "prepare": "husky install",
+    "prepare": "node -e \"if (process.env.NODE_ENV === 'production'){process.exit(1)} \" || husky install",
     "prettier:fix": "prettier --write",
     "prettier:check": "prettier --check",
     "lint": "next lint",
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@amplitude/analytics-browser": "^0.4.1",
+    "@code-hike/mdx": "^0.7.3",
     "@instill-ai/design-system": "^0.0.113",
     "axios": "^0.27.2",
     "clsx": "^1.1.1",
@@ -31,6 +32,7 @@
     "cross-env": "^7.0.3",
     "formik": "^2.2.9",
     "next": "^12.1.0",
+    "next-mdx-remote": "^4.1.0",
     "prismjs": "^1.28.0",
     "react": "^17.0.2",
     "react-code-blocks": "^0.0.9-0",
@@ -39,6 +41,7 @@
     "react-query": "^3.38.0",
     "react-select": "^5.3.1",
     "remark-frontmatter": "^4.0.1",
+    "sharp": "^0.30.7",
     "shiki": "^0.11.1",
     "uuid": "^8.3.2",
     "yaml": "^2.0.1",
@@ -46,7 +49,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
-    "@code-hike/mdx": "^0.7.3",
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
     "@next/env": "^12.2.3",
@@ -95,7 +97,6 @@
     "jest": "^27.5.1",
     "lint-staged": ">=10",
     "msw": "^0.42.1",
-    "next-mdx-remote": "^4.1.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.12",
     "prettier": "^2.6.2",
