--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@types/prismjs": "^1.26.0",
     "@types/react": "^17.0.41",
     "@types/react-dom": "17.0.17",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
