--- a/.env
+++ b/.env
@@ -17,3 +17,4 @@ NEXT_PUBLIC_CONNECTOR_BACKEND_BASE_URL=http://localhost:8082
 NEXT_PUBLIC_MODEL_BACKEND_BASE_URL=http://localhost:8083
 NEXT_PUBLIC_API_VERSION=v1alpha
 NEXT_PUBLIC_INSTILL_AI_USER_COOKIE_NAME=instill-ai-user
+NEXT_PUBLIC_MAIN_URL="http://localhost:3000"
