refactor: rename integration test script

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "prettier:check": "prettier --check",
     "lint": "next lint",
     "download-airbyte-icons": "node ./downloadAirbyteIcons.js",
-    "integration": "npx playwright test"
+    "integration-test": "npx playwright test"
   },
   "dependencies": {
     "@amplitude/analytics-browser": "^0.4.1",
