--- a/.env
+++ b/.env
@@ -1,15 +1,3 @@
-#----------- Docker compose name --------------#
-COMPOSE_PROJECT_NAME=instill
-
-#----------- Container build ------------------#
-DOCKER_BUILDKIT=1
-COMPOSE_DOCKER_CLI_BUILD=1
-
-#----------- Triton server version ------------#
-TRITONSERVER_VERSION=22.01-py3
-
-#----------- For Jest -------------------------#
-
 NEXT_PUBLIC_CONSOLE_BASE_URL=http://localhost:3000
 NEXT_PUBLIC_MGMT_BACKEND_BASE_URL=http://localhost:8084
 NEXT_PUBLIC_PIPELINE_BACKEND_BASE_URL=http://localhost:8081
@@ -17,4 +5,7 @@ NEXT_PUBLIC_CONNECTOR_BACKEND_BASE_URL=http://localhost:8082
 NEXT_PUBLIC_MODEL_BACKEND_BASE_URL=http://localhost:8083
 NEXT_PUBLIC_API_VERSION=v1alpha
 NEXT_PUBLIC_INSTILL_AI_USER_COOKIE_NAME=instill-ai-user
-NEXT_PUBLIC_MAIN_URL="http://localhost:3000"
+NEXT_PUBLIC_CONSOLE_EDITION=local:ce-dev
+NEXT_PUBLIC_DISABLE_USAGE_COLLECTION=false
+NEXT_PUBLIC_API_GATEWAY_BASE_URL=https://localhost:8080
+NEXT_PUBLIC_SELF_SIGNED_CERTIFICATION=true
