refactor: replace default export with named export within services folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
       "@/utils/*": ["utils/*"],
       "@/style": ["styles"],
       "@/style/*": ["styles/*"],
-      "@/services": ["services"],
+
+      // We didn't support import directly from "@/services"
       "@/services/*": ["services/*"],
       "@/lib": ["lib"],
       "@/lib/*": ["lib/*"],
